--- a/test.html
+++ b/test.html
@@ -1,12 +1,40 @@
-<!DOCTYPE HTML>
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title></title>
+  <meta charset="utf-8">
+  <title>Paul's Portfolio</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Framework Test Page</h1>
-
+  <div class="grid">
+    <div class="row" id="header">
+      <div class="col-6"></div>
+      <div class = "col-6">
+        <h1>Paul Foster</h1>
+        <h4 class = "subheader">Front end Beginner</h4>
+      </div>
+    </div>
+    <div class="row">
+      <img src="http://placehold.it/900x150">
+    </div>
+    <h2>Featured Apps</h2>
+    <div class="row">
+      <div class="col-4">
+        <img src="http://placehold.it/300x150">
+        <h3>App 1</h3>
+        <p>app 1 url</p>
+      </div>
+      <div class="col-4">
+        <img src="http://placehold.it/300x150">
+        <h3>App 2</h3>
+        <p>app 2 url</p>
+      </div>
+      <div class="col-4">
+        <img src="http://placehold.it/300x150">
+        <h3>App 3</h3>
+        <p>app 3 url</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
